2024-01-15T00:28:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7522720202 # 24
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-15
* notice: last 14d: unq all: 85 183
* notice: prev accum: outdated-unq outdated-all / unq all: 1479 3438 / 1618 3635
* notice: next accum: outdated-unq outdated-all / unq all: 1488 3452 / 1618 3635
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-31] / []

2024-01-14T08:00:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7517864223 # 22
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-14
* notice: last 14d: unq all: 85 184
* notice: prev accum: outdated-unq outdated-all / unq all: 1479 3438 / 1615 3632
* notice: next accum: outdated-unq outdated-all / unq all: 1479 3438 / 1618 3635
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -8 -13 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [] / [2023-12-31 2024-01-14]

2024-01-14T00:30:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7515778729 # 21
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-14
* notice: last 14d: unq all: 90 194
* notice: prev accum: outdated-unq outdated-all / unq all: 1474 3431 / 1615 3632
* notice: next accum: outdated-unq outdated-all / unq all: 1479 3438 / 1615 3632
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-30] / []

2024-01-13T00:26:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7508948412 # 18