@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-15T00:28:53Z",
-  "count_outdated" : 3452,
-  "uniques_outdated" : 1488,
-  "count" : 3635,
-  "uniques" : 1618,
+  "timestamp" : "2024-01-15T16:04:08Z",
+  "count_outdated" : 3453,
+  "uniques_outdated" : 1489,
+  "count" : 3637,
+  "uniques" : 1620,
   "clones" : [
-    {
-      "timestamp": "2024-01-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-02T00:00:00Z",
       "count": 7,
@@ -121,6 +112,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-01-15T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
