@@ -1,12 +1,7 @@
 {
-  "count": 183,
-  "uniques": 85,
+  "count": 184,
+  "uniques": 86,
   "clones": [
-    {
-      "timestamp": "2024-01-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-02T00:00:00Z",
       "count": 7,
@@ -66,6 +61,11 @@
       "timestamp": "2024-01-14T00:00:00Z",
       "count": 3,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-01-15T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
