@@ -1,3 +1,12 @@
+2024-01-15T16:04:08Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7531368520 # 26
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-15
+* notice: last 14d: unq all: 86 184
+* notice: prev accum: outdated-unq outdated-all / unq all: 1488 3452 / 1618 3635
+* notice: next accum: outdated-unq outdated-all / unq all: 1489 3453 / 1620 3637
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2024-01-01] / [2024-01-15]
+
 2024-01-15T00:28:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7522720202 # 24
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-15
